# ai-code-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  CLEAN_UP_PLAN.md  CLEAN_UP_PLAN_2.md  Cargo.toml  Makefile.toml  README.md  UPDATE_RULES.md  clean_afa.md  code-analyzer_metrics_1741913501.md  dependency_graph.dot  deps.dot  describe-codebase.md  description.md  metrics_metrics_1741913474.md  test_comments.rs
.cargo/: config.toml
scripts/: install-hooks.sh
src/: lib.rs  main.rs
src/ai/: anthropic.rs  config.rs  factory.rs  mistral.rs  mod.rs  openai.rs
src/ai/prompts/: clean_code_analyze.rs  mod.rs
src/analyzer/: file_analyzer.rs  mod.rs
src/cache/: mod.rs
src/commands/: architecture_diagram.rs  clean_code_analyze.rs  clean_comments.rs  delete_comments.rs  dependencies.rs  describe.rs  metrics.rs  mod.rs  run.rs  style.rs
src/dependency/: dependency_analyzer.rs  dependency_graph.rs  dependency_reporter.rs  mod.rs
src/description/: mod.rs
src/metrics/: code_metrics.rs  collector.rs  language.rs  mod.rs  models.rs  reporter.rs
src/output/: markdown.rs  mod.rs  path.rs  style.rs
src/output/markdown/: formatter.rs  mod.rs  renderer.rs  syntax_highlighter.rs
src/style/: detector.rs  mod.rs  models.rs  reporter.rs
src/style_analyzer/: detector.rs  mod.rs  pattern.rs  report.rs
src/util/: error.rs  file_filter.rs  mod.rs  parallel.rs
test_output/: test_comments.cs  test_comments.py  test_comments.rs  test_comments.ts  test_jsdoc.ts
tests/: main.rs
tests/unit/: ai_config_test.rs  analyzer_test.rs  architecture_diagram_test.rs  cache_test.rs  clean_comments_test.rs  delete_comments_test.rs  dependency_graph_test.rs  description_test.rs  file_analyzer_test.rs  language_detector_test.rs  metrics_collector_test.rs  mod.rs  models_test.rs  reporter_test.rs  style_test.rs
