[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2024"
description = "AI-Powered Codebase Analysis Tool"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "codeanalyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
walkdir = "2.4.0"
ignore = "0.4.22"
regex = "1.10.3"

[dev-dependencies]
cargo-make = "0.37.24"
tempfile = "3.10.1"
assert_cmd = "2.0.13"
predicates = "3.0.4"
