[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2024"
description = "AI-Powered Codebase Analysis Tool"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "codeanalyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
walkdir = "2.4.0"
ignore = "0.4.22"
rayon = "1.8.1"
dashmap = "5.5.3"
regex = "1.10.3"
dotenv = "0.15.0"
config = "0.13.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
thiserror = "1.0.51"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
cargo-make = "0.37.24"
tempfile = "3.10.1"
assert_cmd = "2.0.13"
predicates = "3.0.4"
